--- a/SATracker4thSem/ViewAttendance.resx
+++ b/SATracker4thSem/ViewAttendance.resx
@@ -120,13 +120,16 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnPrintAttendance.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAETSURBVEhL7ZcxDgFBFEBpdEoXoZPVqigcglugcBSNTqXi
-        ABIOQekEOk9G/sbP32GHzSzFvuRnk5n//8vObnZma7V/AxgBx4Ixsn1zASbAWa7fxKPW9s1Fio92PBS5
-        40qcTyX+lCAxkMjrH5sT0NXinc2IyFaL3bKUxfPxRRSvgSawUGOliGfSf6DGShFfgRVwUWOliH1UYi9F
-        v1w+wsVAA2gDnZxwOY2QnqHiIXCzkx5cziCkZyre21khxlLvddLczgrpHfeAgzTzxUZLpeaVeKqT6kDf
-        HNaWStwCxmZeR+Y0KWLXQ+f1bV4GvR8HiNNwOS2pceL3+7EPI3b79bulTsPlJFJTXPwNRcU/OdD/5hcm
-        Nne9uIpOAGxdogAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAARNJREFUSEvtlzEOAUEUQGl0Shehk9WqKByCW6BwFI1OpeIAEg5B6QQ6T0b+xs/f
+        YYfNLMW+5GeTmf//y85udmZrtX8DGAHHgjGyfXMBJsBZrt/Eo9b2zUWKj3Y8FLnjSpxPJf6UIDGQyOsf
+        mxPQ1eKdzYjIVovdspTF8/FFFK+BJrBQY6WIZ9J/oMZKEV+BFXBRY6WIfVRiL0W/XD7CxUADaAOdnHA5
+        jZCeoeIhcLOTHlzOIKRnKt7bWSHGUu910tzOCukd94CDNPPFRkul5pV4qpPqQN8c1pZK3ALGZl5H5jQp
+        YtdD5/VtXga9HweI03A5Lalx4vf7sQ8jdvv1u6VOw+UkUlNc/A1FxT850P/mFyY2d724ik4AbF2iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
+  <metadata name="printDocument1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
