--- a/SATracker4thSem/TeacherDashboard.resx
+++ b/SATracker4thSem/TeacherDashboard.resx
@@ -121,7 +121,7 @@
   <data name="btnLogOut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAktJREFUSEvN1s2rTVEYx3GECAMKeUmYmCqkKAMGhjKVmb8BQ/eGXO8J3VK6KAYM
+        DgAACw4BQL7hQQAAAktJREFUSEvN1s2rTVEYx3GECAMKeUmYmCqkKAMGhjKVmb8BQ/eGXO8J3VK6KAYM
         yOh6K3mdMJOBlDISpch7+OjRulrnsc+955xSvrXrtH/P+v3OXnutZ+1x4/53MBtbcRLDeIR7uISj2ISp
         eVzPYFkx/2ZsPuIclmSfjsF0HMTXZP4Ct0pAXNfxMtXEmEOYnH1HBXPwuDJ6j31YnmtHCA0D+FCNuxte
         ubYRLMKzavB5zM917cA8XKjGP4/1kev+AofLgJ/YkfVOwXb8KF53xpx2rMJNbMlat2Bn9eQDWf+n4GIJ
@@ -137,7 +137,7 @@
   <data name="btnDeleteStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAOxJREFUSEvt1cFNQkEUQFESbQNoRCvAENZYgaw1wQawAq0AK5AKpAKpADpgqTHh
+        DQAACw0B7QfALAAAAOxJREFUSEvt1cFNQkEUQFESbQNoRCvAENZYgaw1wQawAq0AK5AKpAKpADpgqTHh
         mllyEzPzHrjyn+Xkvzv5s3m9XqcRMAHGPv9zwBfw6fOzKH9U4sSVmfhrAGuXTrB2/1dnvvjd/c4RYO83
         S9i7WwVsXEn4cLcKWLmS8OZuFfDiSsKzu1XAoysJc3ergFtXEqbuVgHXriRcuVsFDFxJ6LtbBVwA3y4F
         lNlLd5sAO9cCtu41O3FZ5JcD8OpawNK9ZsCTawEL95oBM9cC7txrBty4FjByrxkwBA4uNigzQ/dCgIfg
@@ -147,7 +147,7 @@
   <data name="btnUpdateStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAANNJREFUSEvt1TEKwkAQQNEcRuzsLKwFsbC19BKpLE0VvZdHSK8nUKxsvwxkYTPs
+        DQAACw0B7QfALAAAANNJREFUSEvt1TEKwkAQQNEcRuzsLKwFsbC19BKpLE0VvZdHSK8nUKxsvwxkYTPs
         JsrOFsG8cmfJZyKYopiMGVACT6ABlnqeBVDR9QJW+p6pQNSReL7Ne8Ki0fdN9cQf+m6SNlQFzrTSv5NE
         BS5qdvRmJ3+WJLJVaPPOWZJI1OlsbmYg6tjGv4yK7L9pyBT93V9Ft+33dIjdn4MDHHRFsY8KYKNLnjxR
         Acx1rWUfBRb+g4EZsAb2wDtLVADn2FbATp+ZAe5ZX2kMcAVuQC2vXc8no/QB8Kfon4Mxs1gAAAAASUVO
@@ -157,7 +157,7 @@
   <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAV5JREFUSEvt1kFKA0EQheFcwoUaxXMkegBBxWtojJ7FZVA3Lt1HvYkRT2F0p/JL
+        DQAACw0B7QfALAAAAV5JREFUSEvt1kFKA0EQheFcwoUaxXMkegBBxWtojJ7FZVA3Lt1HvYkRT2F0p/JL
         QSvVL+lOZYLERT4YGIauKrqnpntarZX/BtgG+sAjMALe02X39uwM2NK4xoBNYAB8MtsXcAfsaJ65AMfA
         m2YPGANHmi8EuEgzaMpizzVvVZrpIkV/WI7YzIF2w+UtsWXf0DoTgBuNLOgAu/qw4ErrZNInE+leXEyE
         5Wzn1RxrBo0ocTFRvbyaAzzo6BIXEzXMqznAi44ucTFRo7yakzpwmo6OLak03FjH/qoU7urYEmBPg5Nq
@@ -169,14 +169,14 @@
   <data name="btnViewAttendance.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAFJJREFUSEvt0zEOACAIQ1Hvfyw9GG4OjQlRggz+t0LoQlsDXjCh8zResJkN3Tkw
+        DQAACw0B7QfALAAAAFJJREFUSEvt0zEOACAIQ1Hvfyw9GG4OjQlRggz+t0LoQlsDXjCh8zResJkN3Tkw
         9N6im5t5JLjrvUU3dQ5cK3suLzhYJ3qMn5Q9lxccrBM9BnJM7n87DCBNh6wAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnMarkAttendance.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAATVJREFUSEvtlk1qwzAQhUXO412yqtt9Qq/RRVvobXuCNJvcIJv0lTEjM35orHHk
+        DQAACw0B7QfALAAAATVJREFUSEvtlk1qwzAQhUXO412yqtt9Qq/RRVvobXuCNJvcIJv0lTEjM35orHHk
         rpIPjLHE+55/JHBKD1JKAF4BnBDnAuCDPYsB8MPmCr96fLJrEWwN8AbgquVf7AvD1hqaaS9ncQ2Taytn
         cQ3K3l7O4hqF/LtZcPHVzuIAzwVHLr/wnAtbW2G/CwdbYb8LB1thvwsHA/QAdgC+AWzlm9tJ9ruYzJNe
         W1FpbKtjGz3LTYyQ3sdker1+qYzJk+bSjV6PsN/FhoKs/sRR5LXnbyxn+zb+tXgW9rtwsBX2u3BwIWfe
@@ -187,7 +187,7 @@
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAatJREFUSEu11s2LjlEYx/ExhdlMmJgVphAlFrbyf5hJ42Ujf4Fs5A9gyULZSBbY
+        DQAACw0B7QfALAAAAatJREFUSEu11s2LjlEYx/ExhdlMmJgVphAlFrbyf5hJ42Ujf4Fs5A9gyULZSBbY
         yAJLsZgtRZaSKNbeSnx0piP3/JL7Ze7nW1ednnPd31/P6XTf19TUAHAOH2qdzf2JgMP46S9lfSj7RgeL
         jdA/LGbfqGA/duFzI7Ssd5a97F83mMdjfMNBHMODWkfLUeM7HmFHPj8IzOF14x9+xGlsr3UGnxr7r7At
         Pb3B7Ya0K7fS04t6rL/S2oFy0w+krzO4lMYeXExfZ+rlGcr99HUGK2nrwUr6OlNv6FBepq8zeJu2HrxJ
@@ -200,7 +200,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAARhJREFUSEvtlE1KA0EUhAMBsxByATfxBC7d5xAB72C8imjupHGVuNeduJKIxIXB
+        DQAACw0B7QfALAAAARhJREFUSEvtlE1KA0EUhAMBsxByATfxBC7d5xAB72C8imjupHGVuNeduJKIxIXB
         xRcK3oDUxJlMT6Mi80HDMP2qitd/vV7HXwQYABfAHHiPoe+p5rw+C8ARsOR7FqpxXSui06rQAoXn6zyW
         d1/OXZ8McOfuFdy6Phlg7e4VrF2fjDvX4fpkGnb85vpkfnOP9UDsS9ZTrXusO1qHag5c34p4uarC879c
         BepGS6l9jAOncRP/8nba8aMAfWAMnPhcgeaipu9zjQFGwCXwEif3A7gGToHDGPqeAZuoUa00I/erBRhG
@@ -208,13 +208,13 @@
         bpUAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="pictureBox3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="pbLogo.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbLogo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAIAAABEtEjdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAk0NJREFUeF7tnXdcFEu699294d3du3dv2L177u7d3aOeYzrHI2YxoyIqBsQsiigK
+        vgAADr4B6kKxwAAAk0NJREFUeF7tnXdcFEu699294d3du3dv2L177u7d3aOeYzrHI2YxoyIqBsQsiigK
         KioGBDFiRDFiRsUcUXKWnHPOOUnOOUx8P2NjT1M1wDBMDzM9z/fz+0O7qmeG6erfVFc99dQwPgAAAMA4
         hqEHAAAAAMUHzB0AAICBgLkDAAAwEDB3AAAABgLmDgAAwEDA3AEAABgImDsAAAADAXMHAABgIGDuAAAA
         DATMHQAAgIGAuQMAADAQMHcAAAAGAuYOAADAQMDcAQAAGAiYOwAAAAMBcwcAAGAgYO4AAAAMBMwdAACA
