--- a/SATracker4thSem/SignUp.resx
+++ b/SATracker4thSem/SignUp.resx
@@ -121,7 +121,7 @@
   <data name="btnShow.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAb1JREFUSEvtlr0uBVEUhSkQ8RedBxAll+hFTXSi0IqX8FMgXIlExEMQopNodHQo
+        DAAACwwBP0AiyAAAAb1JREFUSEvtlr0uBVEUhSkQ8RedBxAll+hFTXSi0IqX8FMgXIlExEMQopNodHQo
         PIT/UoTKJ0v2JGPdOeNS0NwvmWRyztpr5+yzz5lpamrQ4L8BRoFV4BS4A17j0bvGVoARj/s1wBRwRf1c
         AJPuUzfAAHDirj/gGOh331KAGeDFnYAHYAGoAB3xDAOLMec8A9PuXwPQDKwD7+4AHABdHpOhOeDQg8Jr
         Td4e80kk3fWoQEmLA3OER1FysVPoAWy5MlAJkyt1gG7g0U2CTRfPuyLHgmlbZQDcAjdAVWOmWXKTHHOZ
@@ -134,7 +134,7 @@
   <data name="btnShowC.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAb1JREFUSEvtlr0uBVEUhSkQ8RedBxAll+hFTXSi0IqX8FMgXIlExEMQopNodHQo
+        DgAACw4BQL7hQQAAAb1JREFUSEvtlr0uBVEUhSkQ8RedBxAll+hFTXSi0IqX8FMgXIlExEMQopNodHQo
         PIT/UoTKJ0v2JGPdOeNS0NwvmWRyztpr5+yzz5lpamrQ4L8BRoFV4BS4A17j0bvGVoARj/s1wBRwRf1c
         AJPuUzfAAHDirj/gGOh331KAGeDFnYAHYAGoAB3xDAOLMec8A9PuXwPQDKwD7+4AHABdHpOhOeDQg8Jr
         Td4e80kk3fWoQEmLA3OER1FysVPoAWy5MlAJkyt1gG7g0U2CTRfPuyLHgmlbZQDcAjdAVWOmWXKTHHOZ
@@ -147,7 +147,7 @@
   <data name="btnHideC.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAalJREFUSEvt1r9rFUEQwPFoFO3iDwSfYGEVQbCwFYIEJY2FiIVCOkUQsdPGUg0I
+        DgAACw4BQL7hQQAAAalJREFUSEvt1r9rFUEQwPFoFO3iDwSfYGEVQbCwFYIEJY2FiIVCOkUQsdPGUg0I
         giAIEgT/BUmTaG2jCIJ2lpIiiEUCoiiKH9k4FjfZvLznu4DF+8IVN7M732P3bvZGRoYMqYB9OIwj6GBr
         HtMK2IkLeIqP1rKC57iC3Xl+32A7ruFTNnXhC2Ywluv1BMbxJlftg0VM5LpdwSQ+50r/wE9czPWr4CS+
         5goD8AuXs6cBDvW5n73yo6xi9q2CUbzOM1pkCbuyt4iv5pGbwKPsLeInedQm8CJ7i7h0oOU8skXKPh/L
@@ -160,7 +160,7 @@
   <data name="btnHide.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAalJREFUSEvt1r9rFUEQwPFoFO3iDwSfYGEVQbCwFYIEJY2FiIVCOkUQsdPGUg0I
+        DQAACw0B7QfALAAAAalJREFUSEvt1r9rFUEQwPFoFO3iDwSfYGEVQbCwFYIEJY2FiIVCOkUQsdPGUg0I
         giAIEgT/BUmTaG2jCIJ2lpIiiEUCoiiKH9k4FjfZvLznu4DF+8IVN7M732P3bvZGRoYMqYB9OIwj6GBr
         HtMK2IkLeIqP1rKC57iC3Xl+32A7ruFTNnXhC2Ywluv1BMbxJlftg0VM5LpdwSQ+50r/wE9czPWr4CS+
         5goD8AuXs6cBDvW5n73yo6xi9q2CUbzOM1pkCbuyt4iv5pGbwKPsLeInedQm8CJ7i7h0oOU8skXKPh/L
@@ -168,6 +168,18 @@
         wNmoMd1VHi/WN0yleFn6hTj6NlqBslJvsSPVqMvjUyqJc43En9z+6N1T2IMzuBGCsho3cT5qHI2HG6/U
         +Ss/mBOdRiDAPbyqxGfLVYnP43GOF3Agx6pgbxyPpyu59cQnYst6k9SIP4nyM7ClkquKC3iJuzneM7i1
         3nG2gfgUHuR4K+B2uXJ8yH/Hb6bWC7f+gRCoAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAFuSURBVEhL7ZbNLkNREMf7EhYosbSoVS15AAniOVR5Fjui
+        sbC0L95ExZ6wU3bITyYZJ/Xvveee+5HUor/kJvdjZv45c2bO3FZrzn8DWAX6wB0wAj78snt7dwSsqF9l
+        gGXgHPiimG/gGljTOKUADoB3jZ7AGNjXeEkAJ76CqpjvscaN4iutI/qLxUhbOdCumN48LO1LqjMFcKme
+        DXChOn/wlimq3hegC2zphwgWs616Ae/TGCbacdtN/VhAT/UCwK1aTzAp2vHnMgxVLwA8qrXzCmy4zTrw
+        rAYJjFQv4BWYRVdt84js/VhtAw0Jb6uzExV+UGtHU/2kBgncq15glsVloy1GnXY6VL2AzdPEA8RE8/Yy
+        i8/oAWIAA/VqgDPVmcIHf151V+ENWFSdTICdhJSnYGNxT+NHsSFecyabb1/jJmFDvGLaLb27Gq8UwAJw
+        6pVZhK3yKnlPU/A/kx5wY6eQ/6XYZfdD69PClpkzC34AfG7t7mxTq9QAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
